# mink

./: .gitignore  .justfile  Cargo.toml  LICENSE  README.md  mink.pyi  pyproject.toml
mink_scripts/: Cargo.toml
mink_scripts/src/: lib.rs  reset_globals.py  set_globals.py
mink_shaders/: Cargo.toml
mink_shaders/src/: lib.rs  rectangle.wgsl  sprite.wgsl
python/: main.py
src/: lib.rs  runtime.rs
src/assets/: api.rs  mod.rs  music.rs  sound.rs  texture.rs
src/audio/: api.rs  mod.rs
src/graphics/: api.rs  builtin.rs  camera.rs  draw.rs  mod.rs  pipeline.rs  quad.rs  stack.rs  target.rs  viewport.rs
src/input/: api.rs  mod.rs
src/math/: api.rs  audio.rs  colors.rs  matrices.rs  mod.rs  vectors.rs  vertex.rs
src/stats/: api.rs  mod.rs
src/time/: api.rs  mod.rs
src/windowing/: api.rs  mod.rs
